--- a/Frontend - GroceryMarket/assets/css/pages/home/home.css
+++ b/Frontend - GroceryMarket/assets/css/pages/home/home.css
@@ -138,10 +138,6 @@
 
 /*----------------------------------------------------------------*/
 
-body{
-   background: #fbfbfb;
-}
-
 #upper-side{
    background: #000000;
 }
@@ -706,7 +702,7 @@ body{
 
 
 #slider .slider .carousel .carousel-item {
-  transition: all 1s;
+  transition: all 0.8s ease-in-out;
 }
 
 #slider .slider .carousel .img{
@@ -748,7 +744,7 @@ body{
 }
 
 #slider .slider .carousel .carousel-text1 a{
-   border: 3px solid green;
+   border: 2px solid green;
    border-radius: 35px;
    background-image: linear-gradient(45deg, green, lightgreen);
    font-size: 20px;
@@ -757,6 +753,7 @@ body{
    font-weight: 500;
    cursor: pointer;
    animation: blink 0.4s infinite;
+   text-decoration: none;
 }
 
 
@@ -796,8 +793,9 @@ body{
    height: max-content;
    border-radius: 30px;
    top: 50%;
-   background: gray;
+   background: green;
    padding: 8px 0;
+   opacity: 1;
 }
 
 #service{  
@@ -852,7 +850,8 @@ body{
 
 .products{
    background: #ededed;
-   height: 129rem;
+   height: 128rem;
+   margin-top: 20px;
 }
 
 .products ul{
@@ -1164,10 +1163,6 @@ body{
    cursor: grab;
 }
 
-#category .owl-dots button span{
-   background-color: #cdc6c6;
-}
-
 #category .owl-dots .active  span{
    background-color: green;
 }
@@ -1231,7 +1226,9 @@ body{
    padding: 5px 5px;
    border-radius: 30px;
    background-image: linear-gradient(45deg, #7ccd91, #e7e5e5);
-   font-size: 35px;
+   font-size: 30px;
+   font-family: 'myFirstFont';
+   font-weight: bolder;
 }
 
 #countdown .countdown{
@@ -1284,7 +1281,7 @@ body{
    gap: 10px;
    font-size: 35px;
    position: absolute;
-   top: 60%;
+   bottom: 27%;
    left: 9%;
 }
 
@@ -1313,7 +1310,7 @@ body{
 
 #countdown .countdown a{
    text-decoration: none;
-   border: 3px solid green;
+   border: 2px solid green;
    border-radius: 35px;
    background-image: linear-gradient(45deg, green, lightgreen);
    font-size: 20px;
@@ -1323,7 +1320,260 @@ body{
    cursor: pointer;
    animation: blink 0.4s infinite;
    position: absolute;
-   top: 85%;
+   bottom: 10%;
    left: 16%;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+
+#countdown .countdown .countdown-discount{
+   position: absolute;
+   bottom: 5%;
+   width: 12%;
+   left: 35%;
+   height: 190px;
+}
+
+#countdown .countdown .countdown-discount img{
+   width: 100%;
+   height: 100%;
+}
+
+#brand h1{
+   border: 1px solid green;
+   padding: 5px 5px;
+   border-radius: 30px;
+   background-image: linear-gradient(45deg, #7ccd91, #e7e5e5);
+   font-size: 30px;
+   text-align: center;
+   width: 60%;
+   margin: 50px auto;
+   font-family: myFirstFont;
+   font-weight: bolder;
+}
+
+#brand .owl-stage-outer:hover{
+   cursor: grab;
+}
+
+#brand .owl-dots{
+   margin-top: 40px;
+}
+
+#brand .owl-item{
+   margin-bottom: 50px;
+   width: 445.25px !important;
+}
+
+#brand .owl-item .brand-image{
+   width: 200px;
+   height: 170px;
+}
+
+#brand .owl-item .brand-image:hover{
+   transform: scale(0.9);
+}
+
+#brand .owl-item .brand-image img{
+   width: 100%;
+   height: 100%;
+}
+
+#brand .owl-item .brand-content{
+   width: 190px;
+   text-align: center;
+   margin-left: 7px;
+   padding: 5px;
+   border-radius: 30px;
+   color: white;
+   background-image: linear-gradient(to bottom, #2e7427, #31b728, #076407);
+   font-weight: 500;
+   animation: blink 0.4s infinite;
+   margin-top: 15px;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+#brand .owl-item .brand-content h5{
+   font-size: 20px;
+}
+
+#brand .owl-item .brand-content span{
+   font-size: 15px;
+}
+
+#brand .owl-item .brand-content:hover{
+   cursor: pointer;
+}
+
+#brand .owl-dots .active  span{
+   background-color: green;
+}
+
+#feedback{
+   background: #ededed;
+   padding-top: 10px;
+   padding-bottom: 50px;
+}
+
+#feedback h1{
+   border: 1px solid green;
+   padding: 5px 5px;
+   border-radius: 30px;
+   background-image: linear-gradient(45deg, #7ccd91, #e7e5e5);
+   font-size: 30px;
+   text-align: center;
+   width: 60%;
+   margin: 50px auto;
+   font-family: myFirstFont;
+   font-weight: bolder;
+}
+
+#feedback .slider .bg-color{
+   width: 99%;
+   height: 500px;
+   border-radius: 60px;
+   text-align: center;
+   padding-top: 6%;
+   margin: 5px auto;
+   background-image: linear-gradient(to bottom, #409350, #ffffff, #277627);
+}
+
+#feedback .slider .bg-color .feedback-image{
+   width: 70px;
+   height: 70px;
+   border-radius: 50%;
+   margin: 0 auto;
+}
+
+#feedback .slider .bg-color .feedback-description{
+   width: 75%;
+   margin: 60px auto;
+}
+
+#feedback .slider .bg-color .feedback-image img{
+   width: 100%;
+   height: 100%;
+   border-radius: inherit;
+}
+
+#feedback .slider .bg-color .feedback-name span{
+   font-size: 25px;
+   font-weight: 500;
+   color: black;
+}
+
+#feedback .slider .bg-color .feedback-position span{
+   font-size: 17px;
+   color: green;
+   font-weight: 500;
+}
+
+#feedback .slider .bg-color .feedback-description p{
+   font-size: 25px;
+   font-family: myFourthFont;
+   color: black;
+   font-weight: bolder;
+}
+
+#feedback .slider .btn{
+   width: 47px;
+   height: max-content;
+   border-radius: 30px;
+   top: 42%;
+   background: green;
+   padding: 8px 0;
+   opacity: 1;
+}
+
+#feedback .slider .prev {
+   left: 5%;
+}
+
+#feedback .slider .next {
+   right: 5%;
+}
+
+#blog h1{
+   border: 1px solid green;
+   padding: 5px 5px;
+   border-radius: 30px;
+   background-image: linear-gradient(45deg, #7ccd91, #e7e5e5);
+   font-size: 30px;
+   text-align: center;
+   width: 60%;
+   margin: 50px auto;
+   font-family: myFirstFont;
+   font-weight: bolder;
+}
+
+#blog .blog {
+   margin-right: 20px;
+}
+
+#blog .blog .blog-image{
+   width: 560px;
+   height: 390px;
+   border-radius: 5%;
+}
+
+#blog .blog .blog-image img{
+   width: 100%;
+   height: 100%;
+   border-radius: inherit;
+}
+
+#blog .blog:hover{
+   cursor: pointer;
+}
+
+#blog .blog:hover .blog-image{
+   transform: scale(1.1);
+}
+
+#blog .blog:hover .blog-content{
+   margin-top: 20px;
+}
+
+#blog .blog:hover .text{
+   margin-top: 20px;
+   color: green;
+}
+
+#blog .blog .blog-content{
+   margin-top: 10px;
+}
+
+#blog .blog .blog-content .blog-author-date{
+   display: flex;
+   justify-content: space-between;
+}
+
+#blog .blog .blog-content .blog-author-date span{
+   font-size: 20px;
+   color: black;
+   font-weight: 600;
+}
+
+
+#blog .blog .blog-content .blog-author-date svg{
+   margin-right: 10px;
+}
+
+#blog .blog .blog-content .blog-name{
+   margin-top: 7px;
+}
+
+#blog .blog .blog-content .blog-name span{
+   font-size: 30px;
+   font-weight: bolder;
+}
+
+#blog .blog .blog-content .blog-description{
+   margin-top: 10px;
+}
+
+#blog .blog .blog-content .blog-description p{
+   font-size: 20px;
+   width: 500px;
+}
+
+
