--- a/Frontend - GroceryMarket/assets/css/pages/home/home.css
+++ b/Frontend - GroceryMarket/assets/css/pages/home/home.css
@@ -850,8 +850,7 @@
 
 .products{
    background: #ededed;
-   height: 128rem;
-   margin-top: 20px;
+   height: 130rem;
 }
 
 .products ul{
@@ -914,11 +913,11 @@
    position: relative;
    padding-bottom: 10px;
    margin-bottom: 45px;
-   box-shadow: rgba(0, 0, 0, 1) 0px 5px 15px;
 }
 
 .products .tab-content .product:hover{
    cursor: pointer;
+   box-shadow: rgba(0, 0, 0, 1) 0px 5px 20px;
 }
 
 .products .tab-content .product-images{
@@ -1115,6 +1114,30 @@
    margin-right: 10px;
    color: white;
    animation: blink 0.5s infinite;
+}
+
+#top-featured .owl-item{
+   margin-right: -69px !important;
+}
+
+#top-featured .owl-dots .active span{
+   background-color: green;
+}
+
+#top-sale .owl-item{
+   margin-right: -69px !important;
+}
+
+#top-sale .owl-dots .active span{
+   background-color: green;
+}
+
+#top-rated .owl-item{
+   margin-right: -69px !important;
+}
+
+#top-rated .owl-dots .active span{
+   background-color: green;
 }
 
 #category .owl-item{
