--- a/Frontend - Organi/assets/css/pages/home/home.css
+++ b/Frontend - Organi/assets/css/pages/home/home.css
@@ -226,9 +226,13 @@
 
 #header .middle-side .account{
    display: flex;
-   margin-top: 16%;
+   margin-top: 70px;
    height: 40px;
    gap: 13px;
+}
+
+#header .middle-side a{
+   text-decoration: none;
 }
 
 #header .middle-side .account:hover{
@@ -459,7 +463,7 @@
 
 #header .down-side .account-title:hover + .account-menu{
    visibility: visible;
-   height: 127px;
+   height: 132px;
 }
 
 #header .down-side .account-menu{
@@ -471,7 +475,7 @@
 
 #header .down-side .account-menu:hover{
    visibility: visible;
-   height: 127px;
+   height: 132px;
 }
 
 
@@ -488,7 +492,6 @@
 
 #header .down-side .account-menu li:hover{
    background-image: linear-gradient(45deg, #cfcfcf, #ffffff);
-   border-bottom: 1px solid #27b927;
 }
 
 #header .down-side .info{
@@ -502,9 +505,9 @@
    font-weight: bolder;
 }
 
-#header .down-side .info .title span:nth-child(1){
-   font-style: italic;
-   font-weight: bolder;
+#header .down-side .info a{
+   text-decoration: none;
+   color: black;
 }
 
 #header .down-side .info .content{
@@ -751,7 +754,7 @@
 #slider .slider .carousel .carousel-text1 a{
    border: 2px solid green;
    border-radius: 35px;
-   background-image: linear-gradient(45deg, green, lightgreen);
+   background: #3ab53a;
    font-size: 20px;
    padding: 5px 25px;
    color: white;
@@ -759,6 +762,10 @@
    cursor: pointer;
    animation: blink 0.4s infinite;
    text-decoration: none;
+}
+
+#slider .slider .carousel .carousel-text1 a:hover{
+   background: green;
 }
 
 
@@ -1069,7 +1076,7 @@
 }
 
 .products .tab-content .product-content .product-rating svg{
-   color: gray;
+   color: #c5c2c2;
 }
 
 .products .tab-content .product-content .product-rating .active{
@@ -1126,6 +1133,8 @@
 
 #top-featured .owl-dots .active span{
    background-color: green;
+   width: 20px;
+   height: 10px;
 }
 
 #top-sale .owl-item{
@@ -1134,6 +1143,8 @@
 
 #top-sale .owl-dots .active span{
    background-color: green;
+   width: 20px;
+   height: 10px;
 }
 
 #top-rated .owl-item{
@@ -1142,6 +1153,8 @@
 
 #top-rated .owl-dots .active span{
    background-color: green;
+   width: 20px;
+   height: 10px;
 }
 
 #category .owl-item{
@@ -1192,6 +1205,8 @@
 
 #category .owl-dots .active  span{
    background-color: green;
+   width: 20px;
+   height: 10px;
 }
 
 #advertisement .advert{
@@ -1338,9 +1353,9 @@
 #countdown .countdown a{
    text-decoration: none;
    border-radius: 35px;
-   background-image: linear-gradient(45deg, green, lightgreen);
+   background: #3ab53a;
    font-size: 20px;
-   padding: 5px 45px;
+   padding: 5px 30px;
    color: white;
    font-weight: 500;
    cursor: pointer;
@@ -1349,6 +1364,11 @@
    bottom: 10%;
    left: 16%;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+   border: 2px solid green;
+}
+
+#countdown .countdown a:hover{
+  background-color: green;
 }
 
 #countdown .countdown .countdown-discount{
@@ -1436,6 +1456,8 @@
 
 #brand .owl-dots .active  span{
    background-color: green;
+   width: 20px;
+   height: 10px;
 }
 
 #feedback{
@@ -1522,6 +1544,12 @@
    right: 5%;
 }
 
+#blog .blogs{
+   display: flex;
+   flex-wrap: wrap;
+   margin-left: 65px;
+}
+
 #blog h1{
    border: 1px solid green;
    padding: 5px 5px;
@@ -1539,6 +1567,7 @@
    width: 580px;
    height: 650px;
    padding-right: 20px;
+   margin-bottom: 50px;
 }
 
 #blog .blog .blog-image{
@@ -1613,11 +1642,12 @@
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%;
-   height: 500px
+   height: 595px;
 }
 
 #footer .upper-side{
    border-bottom: 1px solid #403f3f;
+   padding: 90px 0;
 }
 
 #footer .upper-side .footer-info{
@@ -1780,7 +1810,7 @@
 #footer .down-side{
    display: flex;
    justify-content: space-around;
-   margin-top: 20px;
+   margin-top: 23px;
 }
 
 #footer .down-side .right-side ul{
@@ -1810,7 +1840,7 @@
    background-color: black;
    position: fixed;
    right: 50px;
-   bottom: 80px;
+   bottom: 90px;
    z-index: 123;
    border-radius: 50%;
    cursor: pointer;
@@ -1824,4 +1854,5 @@
 #footer .bg-image .up-arrow svg{
    font-size: 25px;
    color: lime;
+   animation: blink 0.4s infinite;
 }
